--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,4 @@
 @import '../node_modules/bootstrap/scss/bootstrap';
 
 html, body { height: 100%; }
-body { margin: 0; font-family: sans-serif; }
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;font-size: 13px;}
