--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <div class="headerSquare">
     <div class="row">
       <div class="col-2">
-        <input [ngStyle]="getStyles()"type="text"  [(ngModel)]="fname" name="firstName" placeholder="FIRST NAME" style="margin-top:2rem;text-align:center;background: #000;">
+        <input [ngStyle]="getStyles()"type="text"  [(ngModel)]="fname" name="firstName" placeholder="FIRST NAME" style="margin-top:1rem;text-align:center;background: #000;">
         <input [ngStyle]="getStyles()"type="text" [(ngModel)]="sname" placeholder="SECOND NAME" style="text-align:center;background: #000;">
      </div>
       <div class="col">
@@ -18,7 +18,6 @@
       <div class="row-cols-md-7">
         <i class="fa fa-globe"></i> <input [ngStyle]="getStyles()"type="text" [(ngModel)]="web" placeholder="Web"><br/>
         <i class="fa fa-skype"></i> <input [ngStyle]="getStyles()"type="text" [(ngModel)]="skype" placeholder="Skype"><br/>
-        <i class="fa fa-github"></i> <input [ngStyle]="getStyles()"type="text" [(ngModel)]="gitHub" placeholder="GitHub"><br/>
       </div>
       <div class="col">
         <div>
@@ -192,6 +191,9 @@
         </ng-template>
         <ngb-rating [(ngModel)]="skillsArray[i].skillValue" rate={{skillsArray[i].skillValue}} [starTemplate]="t" max="9"></ngb-rating>
       </div>
+      <hr>
+      <i class="fa fa-linkedin"></i> <input class="form-control-sm ml-1 border-0" type="text" [(ngModel)]="linkedIn" placeholder="LinkedIn profile link"> <br/>
+      <i class="fa fa-github"></i>  <input class="form-control-sm ml-1 border-0" type="text" [(ngModel)]="gitHub" placeholder="GitHub profile link"> <br/>
     </div>
   </div>
 
@@ -246,22 +248,19 @@
   </div>
 </div>
 
-<h3>Header of your CV</h3>
-<div>
-  <label for="colorPicker" class="ml-2">Customize color for the header &nbsp;</label>
-  <input type="color" id="colorPicker" name="headColor" (change)="setColorHeader($event)" [value]="colorHeader">
-  <label for="colorPicker" class="ml-5">Font Color &nbsp;</label>
-  <input type="color"  name="fontColor" (change)="setColorFont($event)" [value]="fontColor">
-  <label class="btn btn-outline-info mx-3 image-upload-container">
-    <input #imageInput
-           type="file"
-           accept="image/*"
-           (change)="processFile(imageInput)">
-  </label>
-  <button class="btn btn-success mx-3" (click)="previewPDF()"> Preview <i class="fa fa-paper-plane"></i></button>
-</div>
+<!--<h3>Header of your CV</h3>-->
+<div class="ml-5 my-5">
+<!--  <label for="colorPicker" class="ml-2">Customize color for the header &nbsp;</label>-->
+<!--  <input type="color" id="colorPicker" name="headColor" (change)="setColorHeader($event)" [value]="colorHeader">-->
+<!--  <label for="colorPicker" class="ml-5">Font Color &nbsp;</label>-->
+<!--  <input type="color"  name="fontColor" (change)="setColorFont($event)" [value]="fontColor">-->
 
+<label class="btn btn-primary">
+   <i class="fa fa-image"></i> Select photo <input  #imageInput type="file" style="display: none;"  name="image" (change)="processFile(imageInput)">
+</label>
+  <button class="btn btn-success mb-2 ml-5" (click)="previewPDF()"> Preview <i class="fa fa-paper-plane"></i></button>
 
-<div>
-  <button class="btn btn-success mx-3" (click)="openPDF()"> Download PDF <i class="fa fa-paper-plane"></i></button>
 </div>
+<!--<div>-->
+<!--  <button class="btn btn-success mx-3" (click)="openPDF()"> Download PDF <i class="fa fa-paper-plane"></i></button>-->
+<!--</div>-->
