--- a/src/app/preview/preview.component.html
+++ b/src/app/preview/preview.component.html
@@ -1,10 +1,10 @@
 <div  id="htmlData" #htmlData>
   <div class="headerSquare">
     <div class="row">
-      <div class="col-2">
+      <div class="col-2 my-2">
         <h2 align="center" class="mt-3">{{resume.firstName}} {{resume.secondName}}</h2>
       </div>
-      <div class="col p-sm-0">
+      <div class="col p-sm-0 my-2">
         <i class="fa fa-home"></i>
         {{resume.country}}<br>
         <div class="ml-4">
@@ -12,15 +12,16 @@
         </div>
 
       </div>
-      <div class="col">
+      <div class="col my-2">
         <i class="fa fa-flag"></i> {{resume.citizenShip}} <br/>
-        <i class="fa fa-phone" style="font-size: 1rem;"></i>{{resume.phone}}
-        <div><i class="fa fa-bookmark"></i>Want to relocate (Germany)</div>
+        <i class="fa fa-phone" style="font-size: 1rem;"></i>{{resume.phone}}<br/>
+        <i class="fa fa-envelope"></i>{{resume.email}}<br/>
+<!--        <div><i class="fa fa-bookmark"></i>Want to relocate (Germany)</div>-->
       </div>
-      <div class="row-cols-md-8">
+      <div class="row-cols-md-8 my-2">
         <i class="fa fa-globe"></i> {{resume.web}}<br/>
         <i class="fa fa-skype"></i> {{resume.skype}}<br/>
-        <i class="fa fa-envelope"></i>{{resume.email}}<br/>
+
       </div>
       <div class="col">
         <div>
@@ -115,7 +116,7 @@
           </div>
       </div>
       <hr>
-      <i class="fa fa-linkedin"></i> <a href="https://linkedin.com/in/anna-korotkova-1b126a77/"> LinkedIn profile </a><br/>
+      <i class="fa fa-linkedin"></i> <a href="{{resume.linkedIn}}"> LinkedIn profile </a><br/>
       <i class="fa fa-github"></i> <a href="{{resume.gitHub}}"> GitHub profile </a>
     </div>
   </div>
