How to use is added.

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,60 +1,43 @@
 <div class=" d-flex w-100 h-100 p-3 mx-auto flex-column" id="htmlData" #htmlData>
   <main role="main" class="inner cover">
-    <h1 class="cover-heading">How to use TopCalculator ? </h1>
+    <h1 class="cover-heading">How to use GetResume.io </h1>
     <p class="lead">
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys
-      standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
-      a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
-      remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
-      Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+      To get your perfect free resume you need to
+    </p>
+    <ol class="lead">
+      <li>Enter the information you want in the all fields of the form.</li>
+      <li>Upload your photo.</li>
+      <li>Click on button "Preview".</li>
+    </ol>
+
+    <p class="lead">
+      Afterwards, the new page with your ready resume will be opened.
+<!--      <a href="#" class="btn btn-lg btn-secondary">Learn more</a>-->
+    </p>
+    <hr>
+    <p class="lead font-weight-bold">
+      How to save a resume as a PDF file ?
     </p>
     <p class="lead">
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys
-      standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
-      a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
-      remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
-      Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+      Web browser's menu bar:<br>
     </p>
-    <p class="lead">
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys
-      standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
-      a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
-      remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
-      Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-    </p>
-    <p class="lead">
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys
-      standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
-      a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
-      remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
-      Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-    </p>
-    <p class="lead">
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys
-      standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
-      a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
-      remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
-      Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-    </p>
-    <p class="lead">
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys
-      standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
-      a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
-      remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
-      Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-    </p>
-    <p class="lead">
-      <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
+    <ol class="lead">
+      <li>Choose File > Print.</li>
+      <li>Click the <b>Save as PDF</b>.</li>
+      <li>Unchecked "Headers and footers" options if it is needed.</li>
+      <li>Choose a name and location for the PDF file. Enter the information you want in the Title, Author and Keywords fields.</li>
+    </ol>
+    <hr>
+    <p class="lead font-weight-bold">
+      This service is absolutely free. We would appreciate if you share the link of this website with your friends!
     </p>
   </main>
 
-  <div>
-    <button class="btn btn-success mx-3" (click)="openPDF()"> Download PDF <i class="fa fa-paper-plane"></i></button>
-  </div>
 
-  <!--  <footer class="mastfoot mt-auto">-->
-<!--    <div class="inner">-->
-<!--      <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>-->
-<!--    </div>-->
-<!--  </footer>-->
+    <footer class="mastfoot mt-auto">
+    <div class="inner mb-5">
+      If you have any quiestions or suggestions regarding this website you can send it on mail@getResume.io
+    </div>
+      <a href="#" class="btn btn-lg btn-secondary">Back to home page</a>
+  </footer>
 </div>
