--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 
 <nav class="navbar  bg-dark shadow-sm">
   <div>
-    <a class="h3 text-white" href="#">FreeTemplateCV.com</a>
+    <a class="h3 text-white" href="#">GetResume.io</a>
   </div>
   <div class="navbar-nav-scroll">
     <ul class="navbar-nav bd-navbar-nav flex-row">
       <li routerLinkActive="active" class="nav-item mx-1 " [routerLinkActiveOptions]="{exact:true}">
-        <a class="nav-link text-white" [routerLink]="['/']">Home</a>
+        <a class="nav-link text-white p-2" [routerLink]="['/']">Home  </a>
       </li>
-      <li routerLinkActive="active" class="nav-item mx-1"><a class="nav-link text-white" [routerLink]="['/about']"> About </a></li>
+      <li routerLinkActive="active" class="nav-item mx-1"><a class="nav-link text-white" [routerLink]="['/about']"> How to use this Website ? </a></li>
     </ul>
   </div>
 </nav>
