How to use is added.

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -12,9 +12,9 @@
 
     <p class="lead">
       Afterwards, the new page with your ready resume will be opened.
-<!--      <a href="#" class="btn btn-lg btn-secondary">Learn more</a>-->
     </p>
     <hr>
+    <div class="row-cols-md-8">
     <p class="lead font-weight-bold">
       How to save a resume as a PDF file ?
     </p>
@@ -27,6 +27,10 @@
       <li>Unchecked "Headers and footers" options if it is needed.</li>
       <li>Choose a name and location for the PDF file. Enter the information you want in the Title, Author and Keywords fields.</li>
     </ol>
+    </div>
+    <div class="row-cols-2">
+      <img src="../../assets/cv.png">
+    </div>
     <hr>
     <p class="lead font-weight-bold">
       This service is absolutely free. We would appreciate if you share the link of this website with your friends!
