--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
   <div class="navbar-nav-scroll">
     <ul class="navbar-nav bd-navbar-nav flex-row">
       <li routerLinkActive="active" class="nav-item mx-1 " [routerLinkActiveOptions]="{exact:true}">
-        <a class="nav-link text-white p-2" [routerLink]="['/']">Home  </a>
+        <a class="nav-link text-white p-2" [routerLink]="['/home']"> BlackCV  </a>
       </li>
       <li routerLinkActive="active" class="nav-item mx-1"><a class="nav-link text-white" [routerLink]="['/about']"> How to use this Website ? </a></li>
     </ul>
